--- a/Scripts/Python Crypto API Pull Analysis.ipynb
+++ b/Scripts/Python Crypto API Pull Analysis.ipynb
@@ -1569,7 +1569,32 @@
     "    }\n",
     "    headers = {\n",
     "        'Accepts': 'application/json',\n",
-    "        'X-CMC_PRO_API_KEY': 'ebbd4f5e-e846-4c51-a351-80eec3e5d595',\n",
+    "        'X-CMC_PRO_API_KEY': '#This example uses Python 2.7 and the python-request library.
+
+from requests import Request, Session
+from requests.exceptions import ConnectionError, Timeout, TooManyRedirects
+import json
+
+url = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest'
+parameters = {
+  'start':'1',
+  'limit':'15',
+  'convert':'USD'
+}
+headers = {
+  'Accepts': 'application/json',
+  'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',
+}
+
+session = Session()
+session.headers.update(headers)
+
+try:
+  response = session.get(url, params=parameters)
+  data = json.loads(response.text)
+  #print(data)
+except (ConnectionError, Timeout, TooManyRedirects) as e:
+  print(e',\n",
     "    }\n",
     "\n",
     "    session = Session()\n",
