--- a/Scripts/Python Crypto API Pull Analysis.ipynb
+++ b/Scripts/Python Crypto API Pull Analysis.ipynb
@@ -21,7 +21,7 @@
     "}\n",
     "headers = {\n",
     "  'Accepts': 'application/json',\n",
-    "  'X-CMC_PRO_API_KEY': 'ebbd4f5e-e846-4c51-a351-80eec3e5d595',\n",
+    "  'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',\n",  #Enter your API key here
     "}\n",
     "\n",
     "session = Session()\n",
@@ -1569,7 +1569,7 @@
     "    }\n",
     "    headers = {\n",
     "        'Accepts': 'application/json',\n",
-    "        'X-CMC_PRO_API_KEY': 'ebbd4f5e-e846-4c51-a351-80eec3e5d595',\n",
+    "        'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',\n",   #Enter your API key here
     "    }\n",
     "\n",
     "    session = Session()\n",
@@ -1684,7 +1684,7 @@
     "    }\n",
     "    headers = {\n",
     "        'Accepts': 'application/json',\n",
-    "        'X-CMC_PRO_API_KEY': 'ebbd4f5e-e846-4c51-a351-80eec3e5d595',  # 👈 replace with your API key\n",
+    "        'X-CMC_PRO_API_KEY': '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509',  # 👈 replace with your API key\n",
     "    }\n",
     "\n",
     "    session = Session()\n",
